Fix Horizontal Scroll

--- a/web/css/paypro.css
+++ b/web/css/paypro.css
@@ -1,3 +1,6 @@
+html,body {
+	overflow-x: hidden;
+}
 /* Contact Us */
 .contact_us {
 	background: #8a2785;
